--- a/main.ipynb
+++ b/main.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "**Black Scholes Pricing Model**\n",
     "\n",
-    "Pricing European Call options"
+    "Pricing European Call Options"
    ],
    "id": "84f7a6410c600293"
   },
